--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -6,15 +6,15 @@
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body">
-          <h3 class="card-title">Sign up</h3>
+          <h3 class="card-title">Log in</h3>
           <form method="post" novalidate>
             {% csrf_token %}
             {% include 'includes/form.html' %}
-            <button type="submit" class="btn btn-primary btn-block">Create an account</button>
+            <button type="submit" class="btn btn-primary btn-block">Log in</button>
           </form>
         </div>
-        <div class="card-footer text-muted text-center">
-          Already have an account? <a href="{% url 'login' %}">Log in</a>
+      	<div class="card-footer text-muted text-center">
+					Forgot password <a href="#">Reset password</a>
         </div>
       </div>
     </div>
