--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -12,6 +12,8 @@
 
     <title>Hello, world!</title>
   </head>
+
+
   <body>
 		<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
 	  <a class="navbar-brand" href="/">Navbar</a>
@@ -41,6 +43,18 @@
 	      </li>
 	    </ul>
 	  </div>
+		{% if user.is_authenticated %}
+			<form class="form-inline ml-auto">
+				<a href="{% url 'logout' %}" class="btn btn-outline-secondary">Log out</a>
+				<a href="#" class="btn btn-primary ml-2"> {{ user.username }}</a>
+			</form>
+      {% else %}
+				<form class="form-inline ml-auto">
+          <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+          <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+        </form>
+      {% endif %}
+
 	</nav>
 
 	<div class="container">
