--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+{% block title %}
+	Log in
+{% endblock %}
 {% block content %}
   <form method="post">
 		<div class="row justify-content-center">
