--- a/projects/templates/home.html
+++ b/projects/templates/home.html
@@ -1,1 +1,12 @@
 {% extends "base.html" %}
+
+{% block title %}
+	Welcome!
+{% endblock %}
+
+{% block description %}
+{% endblock %}
+
+{% block keywords %}
+
+{% endblock %}
