Add detail project view and some tests

--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -11,6 +11,7 @@
 	    <link rel="stylesheet" href="{% static "css/base.css" %}">
 		<title>
 		  {% block title %}
+         
 		  {% endblock %}
 		</title>
 		<meta name="description" content="
@@ -92,6 +93,7 @@
 		<script src="/static/js/jquery-3.2.1.min.js"></script>
 		<script src="/static/js/popper.min.js"></script>
 		<script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/projects.js"></script>
 
   </body>
 </html>
