--- a/projects/templates/home.html
+++ b/projects/templates/home.html
@@ -1,12 +1,17 @@
 {% extends "base.html" %}
 
 {% block title %}
-	Welcome!
+	{{request.get_host}} - home
 {% endblock %}
 
 {% block description %}
+
 {% endblock %}
 
 {% block keywords %}
+
+{% endblock %}
+
+{% block content %}
 
 {% endblock %}
