--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -11,7 +11,7 @@
 	    <link rel="stylesheet" href="{% static "css/base.css" %}">
 		<title>
 		  {% block title %}
-         
+
 		  {% endblock %}
 		</title>
 		<meta name="description" content="
@@ -24,7 +24,8 @@
 
 
   <body>
-		<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="container">
 	  <a class="navbar-brand" href="/">Navbar</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -45,25 +46,30 @@
 	          Apps
 	        </a>
 	        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-	          <a class="dropdown-item" href="#">Projects</a>
+	          <a class="dropdown-item" href="{% url 'projects_view' %}">Projects</a>
 	          <a class="dropdown-item" href="#">Another app</a>
 	          <a class="dropdown-item" href="#">Another app</a>
 	        </div>
 	      </li>
 	    </ul>
-	  </div>
+    </div>
 		{% if user.is_authenticated %}
-			<form class="form-inline ml-auto">
-				<a href="{% url 'logout' %}" class="btn btn-outline-secondary">Log out</a>
-				<a href="#" class="btn btn-primary ml-2"> {{ user.username }}</a>
-			</form>
+			<ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+  				<a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username }}</a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu"><a class="dropdown-item" href="#">My account</a><a class="dropdown-item" href="#">Change password</a>
+            <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+          </div>
+        </li>
+      </ul>
       {% else %}
 				<form class="form-inline ml-auto">
           <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-          <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+          <a href="{% url 'signup' %}" class="btn btn-primary ml-1">Sign up</a>
         </form>
       {% endif %}
-
+    </div>
 	</nav>
 
 	<div class="container">
