--- a/projects/templates/project_update.html
+++ b/projects/templates/project_update.html
@@ -4,11 +4,11 @@
 	<div class="col-sm-6">
 		<div class="card">
 			<div class="card-body">
-				<h3 class="card-title">Add new project</h3>
+				<h3 class="card-title">Update project</h3>
 				<form method="post" novalidate>
 					{% csrf_token %}
 					{% include 'includes/form.html' %}
-					<button type="submit" class="btn btn-primary btn-block">Add</button>
+					<button type="submit" class="btn btn-primary btn-block">Update</button>
 				</form>
 			</div>
 		</div>
