--- a/projects/templates/projects_view.html
+++ b/projects/templates/projects_view.html
@@ -15,23 +15,27 @@
 {% endblock %}
 
 {% block content %}
-  <table class="table table-hover">
-  	<thead class="thead-light">
-			<tr>
-				<th scope="col">Name</th>
-				<th scope="col">Start</th>
-				<th scope="col">Deadline</th>
-				<th scope="col">In work</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for project in projects %}
-				<tr onclick="window.location='{% url 'detail_project_view' project.id %}';">
-					<td>{{ project.name }}</td>
-					<td>{{ project.start_date }}</td>
-					<td>{{ project.end_date|naturalday}}</td>
-					<td>{{ project.event.in_work }}</td>
-				</tr>
-			{% endfor %}
+		<div class="col-sm-10">
+			<table class="table table-hover">
+				<thead class="thead-light">
+					<tr>
+						<th scope="col">Name</th>
+						<th scope="col">Start</th>
+						<th scope="col">Deadline</th>
+						<th scope="col">In work</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for project in projects %}
+						<tr onclick="window.location='{% url 'detail_project_view' project.id %}';">
+							<td>{{ project.name }}</td>
+							<td>{{ project.start_date }}</td>
+							<td>{{ project.end_date|naturalday}}</td>
+							<td>{{ project.event.in_work }}</td>
+						</tr>
+					{% endfor %}
+		</div>
+
+
 
 {% endblock %}
