--- a/projects/templates/project_detail_view.html
+++ b/projects/templates/project_detail_view.html
@@ -36,6 +36,7 @@
 				</ul>
 			<div class="row">
 				<a href='#' class="btn btn-primary">Start working</a>
+				<a href="{% url 'project_update' pk=project.id %}" class="btn btn-primary">Update</a>
 				<a href='#' class="btn btn-secondary">Add event</a>
 				<a href='#' class="btn btn-secondary">Add list</a>
 			</div>
